--- a/installer/roles/local_docker/tasks/standalone.yml
+++ b/installer/roles/local_docker/tasks/standalone.yml
@@ -82,6 +82,12 @@
     state: started
     restart_policy: unless-stopped
     image: "{{ awx_web_docker_actual_image }}"
+    volumes: >
+      {{
+        [project_data_dir + ':/var/lib/awx/projects:z'] if project_data_dir is defined else []
+        + [ca_trust_dir + ':/etc/pki/ca-trust/source/anchors:ro'] if ca_trust_dir is defined else []
+        + awx_web_extra_volumes if awx_task_extra_volumes is defined else []
+      }}
     user: root
     ports:
       - "{{ host_port }}:8052"
@@ -124,6 +130,7 @@
       {{
         [project_data_dir + ':/var/lib/awx/projects:z'] if project_data_dir is defined else []
         + [ca_trust_dir + ':/etc/pki/ca-trust/source/anchors:ro'] if ca_trust_dir is defined else []
+        + awx_task_extra_volumes if awx_task_extra_volumes is defined else []
       }}
     links: "{{ awx_task_container_links|list }}"
     user: root
